guacamole/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  labels:
    app: guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      serviceAccount: guacamole
      containers:
        - name: guacamole
          image: "guacamole/guacamole:latest"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
#          livenessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 60
#            periodSeconds: 15
#            timeoutSeconds: 3
#          readinessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 30
#            periodSeconds: 15
#            timeoutSeconds: 3
        #   resources:
        #     requests:
        #       cpu: 500m
        #       memory: 2Gi
        #     limits:
        #       cpu: 2
        #       memory: 2.5Gi
        - name: guacd
          image: "guacamole/guacd:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacd
              containerPort: 4822
              protocol: TCP
#          livenessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 60
#            periodSeconds: 15
#            timeoutSeconds: 3
#          readinessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 30
#            periodSeconds: 15
#            timeoutSeconds: 3
        #   resources:
        #     requests:
        #       cpu: 500m
        #       memory: 2Gi
        #     limits:
        #       cpu: 2
        #       memory: 2.5Gi
        - name: oauth-proxy
          image: openshift/oauth-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8443
            name: public
          args:
          - --https-address=:8443
          - --provider=openshift
          - --openshift-service-account=guacamole
          - --upstream=http://localhost:8080
          - --tls-cert=/etc/tls/private/tls.crt
          - --tls-key=/etc/tls/private/tls.key
          - --cookie-secret=SECRET
          volumeMounts:
            - mountPath: /etc/tls/private
              name: proxy-tls
        volumes:
          - name: proxy-tls
            secret:
              secretName: proxy-tls
