guacamole/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guacamole
  name: guacamole
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: guacamole
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
