guacamole/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: guacamole
  name: guacamole
spec:
  host: apps.wheel.sh
  path: /
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: guacamole
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
